--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.google.zxing:javase:3.3.3'
     implementation project(path: ':websocketlib')
     implementation files('libs/arcsoft_face.jar')
     implementation files('libs/WRFID-8_USB.jar')
